--- a/.github/workflows/main_report-analyzer-app.yml
+++ b/.github/workflows/main_report-analyzer-app.yml
@@ -61,7 +61,9 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-
+        
+      - name: Make startup.sh executable
+        run: chmod +x startup.sh
       
       - name: Login to Azure
         uses: azure/login@v2
