--- a/.github/workflows/main_report-analyzer-app.yml
+++ b/.github/workflows/main_report-analyzer-app.yml
@@ -78,4 +78,5 @@ jobs:
         with:
           app-name: 'report-analyzer-app'
           slot-name: 'Production'
+          package: 'release.zip'
           
