--- a/.github/workflows/main_jeminjemin-streamlit.yml
+++ b/.github/workflows/main_jeminjemin-streamlit.yml
@@ -62,7 +62,9 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
+      - name: Make startup.sh executable
+        run: chmod +x startup.sh
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -76,4 +78,5 @@ jobs:
         with:
           app-name: 'jeminjemin-streamlit'
           slot-name: 'Production'
+          package: 'release.zip'
           
